--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,65 +1,43 @@
-.active{
-  font-size: 19px;
-  font-weight: bolder;
-  transition: all .2s;
-  color: #333333;
-}
-.unactive{
-  color: #666666;
-  font-size: 15px;
-}
-.createPosts{
-  right: 15px;
-  z-index: 99;
-  bottom: 30px;
-}
-.Panel{
-  padding-top: 10px;
-}
-// 生成一个背景色为#5D61FF,宽高为55px,下边距为10px的圆形
-.airdrop{
-  margin: 0 auto;
-  color: white;
-  line-height: 55px;
-  text-align: center;
-  font-size: 12px;
-  width: 55px;
-  height: 55px;
-  background: linear-gradient(45deg, #5D61FF, #5D78FF);
-  box-shadow: 0px 5px 10px 0px rgba(93, 97, 255, 0.3);
-  border-radius: 50%;
-  font-weight: 600;
-}
-.homepage{
+.container{
+  display: grid;
   height: 100vh;
-  grid-template-rows: auto repeat(1,54px) 1fr;
-  grid-template-areas:
-      "sidebar"
-      "header"
-      "main";
-  &-tabs{
-    grid-area: header;
+  grid-template-areas: 
+    "header" 
+    "content";
+  grid-template-rows: 45px 1fr;
+}
+.header{
+  grid-area: header;
+}
+.content{
+  grid-area: content;
+  display: grid;
+  grid-template-areas: "side main";
+  border-top: 1px solid #f9f9f9;
+  grid-template-columns: 105px 1fr;
+}
+.side{
+  grid-area: side;
+  width: 105px;
+  height: calc(100vh - 45px);
+  overflow-y: auto;
+}
+.main{
+  grid-area: main;
+  padding-left: 10px;
+  overflow-y: auto;
+  height: calc(100vh - 45px);
+}
+.list-item{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  .list-item-logo{
+    width: 40px;
+    flex: none;
   }
-  &-content{
-    grid-area: main;
-    overflow: auto;
+  .list-item-content{
+    flex: 1;
+    padding-left: 10px;
   }
-}
-// me
-.bg{
-  display: block;
-  width: 100%;
-  height: calc(100vw * 0.408);
-}
-.adm-list-item-content-arrow{
-  font-size: 9px;
-}
-.adm-badge-dot{
-  width: 6px;
-  height: 6px;
-  min-width: 6px;
-  border-radius: 50px;
-}
-.me-tips {
-  padding: 20px 0;
 }
