--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -5,12 +5,26 @@
   position: sticky;
   top: 0;
   z-index: 100;
+  .header{
+    position: relative;
+    z-index: 10001;
+  }
 }
 .side{
   width: 100%;
-}
-.main{
-  padding: 0 15px;
+  border-top: 1px solid var(--adm-color-border);
+  display: grid;
+  grid-template-areas: "adm-tabs adm-image";
+  grid-template-columns: 1fr 30px;
+  align-items: center;
+  .adm-tabs{
+    grid-area: adm-tabs;
+  }
+  .adm-image{
+    grid-area: adm-image;
+    padding-right: 15px;
+    padding-left: 5px;
+  }
 }
 .list-item{
   display: flex;
@@ -24,15 +38,19 @@
   .list-item-content{
     flex: 1;
     padding-left: 10px;
-    font-size: 16px;
+    font-size: 14px;
     width: 0;
     .desc{
-      font-size: 12px;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      font-size: 10px;
       margin-top: 5px;
+      line-height: 11px;
       color: #999;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      word-break: keep-all;
     }
   }
 }
@@ -42,6 +60,48 @@
   gap: 20px 10px;
 }
 .main-title{
-  margin: 0;
-  padding: 25px 0;
+  font-size: 18px;
+  font-weight: bold;
+  color: #111111;
+  margin: 0 0 20px;
+}
+.category-item{
+  padding: 15px;
+  border-top:1px solid var(--adm-color-border);
+}
+.select-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333333;
+  height: 50px;
+  padding: 0 15px;
+}
+.pop-category-box{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 7px;
+  height: 40vh;
+  overflow-y: auto;
+  padding: 0 15px;
+  .pop-category-item{
+    width: 100px;
+    height: 40px;
+    line-height: 40px;
+    padding:0 5px;
+    text-align: center;
+    background: #F8F8F8;
+    border-radius: 5px;
+    color: #333333;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    &.active{
+      background: rgba(93, 97, 255, 0.1);
+      color: #5D61FF;
+    }
+  }
 }
