fix: get title position fail

--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -64,9 +64,10 @@
   font-weight: bold;
   color: #111111;
   margin: 0 0 20px;
+  padding-top: 15px;
 }
 .category-item{
-  padding: 15px;
+  padding:0 15px 15px;
   border-top:1px solid var(--adm-color-border);
 }
 .select-header{
