--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -1,18 +1,22 @@
 
 .top-bar{
   background-color: white;
-  width: 100vw;
-  position: sticky;
-  top: 0;
   z-index: 100;
   .header{
     position: relative;
+    background-color: white;
     z-index: 10001;
   }
 }
 .side{
+  width: 100vw;
+  position: sticky;
+  top: 0;
   width: 100%;
+  z-index: 10001;
+  background-color: white;
   border-top: 1px solid var(--adm-color-border);
+  border-bottom: 1px solid var(--adm-color-border);
   display: grid;
   grid-template-areas: "adm-tabs adm-image";
   grid-template-columns: 1fr 30px;
@@ -24,6 +28,9 @@
     grid-area: adm-image;
     padding-right: 15px;
     padding-left: 5px;
+  }
+  .adm-tabs-header{
+    border-bottom: none;
   }
 }
 .list-item{
