--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -24,10 +24,13 @@
   .adm-tabs{
     grid-area: adm-tabs;
   }
-  .adm-image{
+  .show-menu{
     grid-area: adm-image;
     padding-right: 15px;
     padding-left: 5px;
+    height: 50px;
+    display: grid;
+    align-items: center;
   }
   .adm-tabs-header{
     border-bottom: none;
