feat:add extension route

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -177,8 +177,24 @@
   visibility:visible;
 }
 
+.\!visible{
+  visibility:visible !important;
+}
+
 .fixed{
   position:fixed;
+}
+
+.m-25{
+  margin:25px;
+}
+
+.mt-25{
+  margin-top:25px;
+}
+
+.block{
+  display:block;
 }
 
 .flex{
@@ -193,11 +209,6 @@
   height:100vh;
 }
 
-.transform{
-  -webkit-transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .items-center{
   align-items:center;
 }
@@ -206,8 +217,18 @@
   justify-content:center;
 }
 
+.truncate{
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+}
+
 .text-center{
   text-align:center;
+}
+
+.align-middle{
+  vertical-align:middle;
 }
 
 .text-lg{
