--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -13,7 +13,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 10001;
+  // z-index: 10001;
   background-color: white;
   border-top: 1px solid var(--adm-color-border);
   border-bottom: 1px solid var(--adm-color-border);
