feat: group by  the sub category

--- a/src/pages/extensions/index.less
+++ b/src/pages/extensions/index.less
@@ -126,3 +126,9 @@
   padding: 10px 0;
   font-size: 14px;
 }
+.sub-category-title{
+  display: block;
+  font-size: 14px;
+  color: #999999;
+  margin:20px 0 15px ;
+}
