--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -189,8 +189,8 @@
   margin:25px;
 }
 
-.mt-25{
-  margin-top:25px;
+.mt-10{
+  margin-top:10px;
 }
 
 .block{
@@ -227,10 +227,6 @@
   text-align:center;
 }
 
-.align-middle{
-  vertical-align:middle;
-}
-
 .text-lg{
   font-size:16px;
   line-height:18px;
@@ -240,18 +236,27 @@ html{
   font-size:16px;
 }
 
+@media (prefers-color-scheme: dark) {
+  body{
+    background:#000000;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body{
+    background:#ffffff;
+  }
+}
+
 body{
   margin:0;
   padding:0;
-  background:white;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
 
 :root:root{
   --adm-color-primary: #5D61FF;
   --fixed-active-line-width: 9px;
-  --color-theme: #333;
-  --adm-color-border: #F5F5F5;
 }
 
 div{
@@ -263,18 +268,8 @@ p{
   padding: 0;
 }
 
-.adm-tabs-tab{
-  padding: 16px 0 18px;
-}
-
-.adm-tabs-tab-list{
-  background-color: white;
-}
-
-.adm-tabs-tab{
-  font-size: 14px;
-  font-weight: 400;
-  color: #666666;
+.color-primary{
+  color:var(--theme-color)
 }
 
 .adm-tabs-tab.adm-tabs-tab-active{
