--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -5,17 +5,24 @@
   html{
     font-size:16px;
   }
+  @media (prefers-color-scheme: dark) {
+    body{
+      background:#000000;
+    }
+  }
+  @media (prefers-color-scheme: light) {
+    body{
+      background:#ffffff;
+    }
+  }
   body{
     margin:0;
     padding:0;
-    background:white;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
   }
   :root:root{
     --adm-color-primary: #5D61FF;
     --fixed-active-line-width: 9px;
-    --color-theme: #333;
-    --adm-color-border: #F5F5F5;
   }
   .text-color-white{
     color:white
@@ -28,19 +35,8 @@
     padding: 0;
   }
   .color-primary{
-    color:var(--color-theme)
+    color:var(--theme-color)
   }
-}
-.adm-tabs-tab{
-  padding: 16px 0 18px;
-}
-.adm-tabs-tab-list{
-  background-color: white;
-}
-.adm-tabs-tab{
-  font-size: 14px;
-  font-weight: 400;
-  color: #666666;
 }
 .adm-tabs-tab.adm-tabs-tab-active{
   font-size: 16px;
