feat: add web store

--- a/src/pages/extensions/index.less
+++ b/src/pages/extensions/index.less
@@ -16,3 +16,13 @@
   color: #999999;
   margin:20px 0 15px ;
 }
+.right-web-store{
+  color: var(--theme-color);
+  padding: 3px 0;
+  font-size: 12px;
+}
+@media (prefers-color-scheme: light) {
+  .right-web-store{
+      color: #999999;
+  }
+}
