--- a/src/pages/common.less
+++ b/src/pages/common.less
@@ -183,3 +183,10 @@
   height: 50px;
   padding: 0 15px;
 }
+
+@media screen and (min-width:768px) {
+  .category-item{
+    padding-left: 300px;
+    padding-right: 300px;
+  }
+}
