--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -1,1 +1,10 @@
 @import '../common.less';
+.beta-tag{
+    color: var(--theme-text-color);
+    // background-color: #0d111c;
+    font-size: 10px;
+    // padding: 2px 4px 3px 4px;
+    margin-left: 5px;
+    line-height: 1;
+    border-radius: 4px;
+}
