--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -185,6 +185,10 @@
   position:fixed;
 }
 
+.relative{
+  position:relative;
+}
+
 .m-25{
   margin:25px;
 }
@@ -209,20 +213,16 @@
   height:100vh;
 }
 
+.flex-grow{
+  flex-grow:1;
+}
+
 .items-center{
   align-items:center;
 }
 
 .justify-center{
   justify-content:center;
-}
-
-.gap-4{
-  gap:16px;
-}
-
-.gap-2{
-  gap:8px;
 }
 
 .gap-1{
@@ -239,6 +239,40 @@
   border-radius:4px;
 }
 
+.rounded-l-md{
+  border-top-left-radius:6px;
+  border-bottom-left-radius:6px;
+}
+
+.rounded-r-md{
+  border-top-right-radius:6px;
+  border-bottom-right-radius:6px;
+}
+
+.border{
+  border-width:1px;
+}
+
+.border-gray-300{
+  --tw-border-opacity:1;
+  border-color:rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.bg-blue-500{
+  --tw-bg-opacity:1;
+  background-color:rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.px-4{
+  padding-left:4px;
+  padding-right:4px;
+}
+
+.py-2{
+  padding-top:2px;
+  padding-bottom:2px;
+}
+
 .text-center{
   text-align:center;
 }
@@ -246,6 +280,11 @@
 .text-lg{
   font-size:16px;
   line-height:18px;
+}
+
+.text-white{
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 html{
@@ -288,8 +327,66 @@ p{
   color:var(--theme-color)
 }
 
+.swap-title{
+  color: var(--adm-color-primary);
+  font-size: 24px;
+  font-weight: bold;
+  -webkit-user-select: none;
+          user-select: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width:767px){
+  .swap-title{
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.px-10{
+  padding-left:10px;
+  padding-right:10px;
+}
+
+.py-10{
+  padding-top:10px;
+  padding-bottom:10px;
+}
+
 .adm-tabs-tab.adm-tabs-tab-active{
   font-size: 16px;
   font-weight: bold;
   color: #333333;
+}
+
+.hover\:bg-blue-600:hover{
+  --tw-bg-opacity:1;
+  background-color:rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.focus\:border-blue-500:focus{
+  --tw-border-opacity:1;
+  border-color:rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus{
+  outline:2px solid transparent;
+  outline-offset:2px;
+}
+
+.focus\:ring:focus{
+  --tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow:var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-200:focus{
+  --tw-ring-opacity:1;
+  --tw-ring-color:rgb(191 219 254 / var(--tw-ring-opacity));
 }
