--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -37,7 +37,23 @@
   .color-primary{
     color:var(--theme-color)
   }
+
+  .swap-title{
+    color: var(--adm-color-primary);
+    font-size: 24px;
+    font-weight: bold;
+    user-select: none;
+    cursor: pointer;
+  }
+
 }
+
+@media screen and (max-width:767px){
+  .swap-title{
+    font-size: 18px;
+  }
+}
+
 .adm-tabs-tab.adm-tabs-tab-active{
   font-size: 16px;
   font-weight: bold;
