--- a/src/components/search/index.less
+++ b/src/components/search/index.less
@@ -1,5 +1,5 @@
-.width-80 {
-    width: 80%;
+.width-70 {
+    width: 70%;
 }
 
 .margin-right-10 {
@@ -8,4 +8,19 @@
 
 .margin-bottom-10 {
     margin-bottom: 10px;
+}
+
+.outer-search-container {
+    display: block;
+    margin: 0 20px;
+}
+
+.inner-search-container {
+    display: flex;
+    flex: 1;
+    width: auto;
+    margin: 0 auto 20px auto;
+    max-width: 736px;
+    overflow: hidden;
+    height: 35px;
 }
