--- a/src/components/search/index.less
+++ b/src/components/search/index.less
@@ -23,4 +23,13 @@
     max-width: 736px;
     overflow: hidden;
     height: 35px;
+    justify-content:space-between;
+}
+
+.inner-search-button {
+    height: 33px;
+    padding: 0 5px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #4e6ef2;
 }
